# medai_ner

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  env.example  example_usage.py  main.py  model_loader.py  ner_service.py  pyproject.toml  requirements-dev.txt  requirements-frozen.txt  requirements-minimal.txt  requirements-prod.txt  requirements.txt  setup_dev.py
api/: app.py
